# minimal_mpegts_std_impl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_RU.md
examples/: CMakeLists.txt  basic_example.cpp
ideas/: external_profiling_architecture.md  phase3_capabilities_analysis.md  todo.md  todo_progress.md
include/: mpegts_demuxer.hpp  mpegts_packet.hpp  mpegts_pcr.hpp  mpegts_pes.hpp  mpegts_psi.hpp  mpegts_storage.hpp  mpegts_types.hpp
scripts/: profiling_runner_linux.sh  profiling_runner_windows.ps1
src/: CMakeLists.txt  mpegts_demuxer.cpp  mpegts_packet.cpp  mpegts_pcr.cpp  mpegts_pes.cpp  mpegts_psi.cpp  mpegts_storage.cpp
tests/: CMakeLists.txt  test_demuxer_basic.cpp  test_demuxer_scenarios.cpp  test_framework.cpp  test_framework.hpp  test_packet_generator.cpp  test_packet_generator.hpp  test_pcr.cpp  test_pes.cpp  test_psi_tables.cpp  test_synchronization.cpp
